find_package(type_traist_notebook)
if(DEFINED TYPE_TRAIST_NOTEBOOK_VERSION)
    add_definitions(-DENABLE_STACK_INFO=1)
    set(STACK_INFO_SRC stack_info.cpp)
else()
    add_definitions(-DENABLE_STACK_INFO=0)
    set(STACK_INFO_SRC "")
endif()
add_library(plugin_basic SHARED plugin_basic.cpp ${STACK_INFO_SRC})